# trade-lab

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/modules/: CodeCoverage.cmake
src/: CMakeLists.txt  main.cpp
src/analysis/: CMakeLists.txt  finmetrics_calculator.cpp  finmetrics_calculator.h
src/bar-aggregators/: CMakeLists.txt  tick_aggregator.cpp  tick_aggregator.h  time_aggregator.cpp  time_aggregator.h  volume_aggregator.cpp  volume_aggregator.h
src/bar_aggregators/: CMakeLists.txt  time_aggregator.cpp  time_aggregator.h
src/collectors/: CMakeLists.txt  exchange.cpp  exchange.h
src/db-connectors/: CMakeLists.txt  db_connector.h  postgres_connector.cpp  postgres_connector.h
src/python-bindings/: CMakeLists.txt  main-bindings.cpp
src/trading-structures/: CMakeLists.txt  abstract_bar_aggregator.h  aggregator_bar_builder.cpp  aggregator_bar_builder.h  aggregator_builder.h  aggregator_rule.cpp  aggregator_rule.h  bar.cpp  bar.h  bar_aggregator.h  footprint.cpp  footprint.h  statistic.h  stock_bar_aggregator.h  trade.cpp  trade.h  trading_spec.cpp  trading_spec.h
src/trading_structures/: CMakeLists.txt  bar.cpp  bar.h  bar_aggregator.h  trade.cpp
test/: CMakeLists.txt
test/resources/: bad_data.csv  test_data.csv
test/src/: bar_tests.cpp  finmetrics_calculator_tests.cpp  tick_aggregator_tests.cpp  time_aggregator_tests.cpp  trade_tests.cpp  volume_aggregator_tests.cpp
